--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body style="min-width:300px;max-width:300px;background-color:#e8e8e8;font-size: 0.8rem; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
   <app-root></app-root>
 </body>
 </html>
